got some folder file structure up

--- a/project2/produkt.html
+++ b/project2/produkt.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Produkt</title>
 </head>
 <body>
-    <h1>Andreas sida</h1>
+    <h1>Här ska jag skapa prototyp sidan</h1>
 </body>
 </html>
