--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <meta charset="utf-8" />
     <title>GruppUppgift</title>
@@ -8,8 +7,8 @@
 <body>
     <h1>GruppUppgift: Välj 1 wireframe och ta till prototyp</h1>
     <ul>
-        <li><a href="project1/index.html">Andreas</a></li>    
+        <li><a href="project1/index.html">Andreas</a></li>
         <li><a href="project2/index.html">Anders</a></li>
-</ul>
+    </ul>
 </body>
 </html>
