--- a/project2/index.html
+++ b/project2/index.html
@@ -1,11 +1,14 @@
 ﻿<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Produktsida</title>
 </head>
 <body>
     <h1>Anders sida</h1>
+    <p>Denna wireframe tänke jag ta till prototyp (klicka på bilden för att se prototypen)</p>
+    <a href="produkt.html">
+        <img src="img/ProduktSida.png" alt="en produkt prototyp websida" />/"
+    </a>
 </body>
 </html>
