added some bootstrap

--- a/project2/produkt.html
+++ b/project2/produkt.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="utf-8" />
     <title>Produkt</title>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap theme -->
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Här ska jag skapa prototyp sidan</h1>
+<body role="document">
+    <div class="container theme-showcase" role="main">
+        <div class="page-header">
+            <h1>Här ska jag skapa prototyp sidan</h1>
+        </div>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="lib/jquery-2.2.2.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="lib/bootstrap.min.js"></script>
+    </div>
 </body>
 </html>
