--- a/project2/produkt.html
+++ b/project2/produkt.html
@@ -48,25 +48,36 @@
             </div>
             <div id="Bilder" class="tab-pane fade">
                 <h3>Bilder</h3>
-                <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
+                <div class="row">
+                    <div class="col-sm-6 col-md-3">
+                        <a href="img/vindkraftverk2.jpg" class="thumbnail">
+                            <img src="img/vindkraftverk2.jpg" alt="Generic placeholder thumbnail">
+                        </a>
+                    </div>
+
+                    <div class="col-sm-6 col-md-3">
+                        <a href="img/vindkraftverk3.jpg" class="thumbnail">
+                            <img src="img/vindkraftverk3.jpg" alt="Generic placeholder thumbnail">
+                        </a>
+                    </div>
+                    </div>
+                    <div id="Övrigt" class="tab-pane fade">
+                        <h3>Övrigt</h3>
+                        <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
+                    </div>
+                    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+                    <script src="lib/jquery-2.2.2.min.js"></script>
+                    <!-- Include all compiled plugins (below), or include individual files as needed -->
+                    <script src="lib/bootstrap.min.js"></script>
+                </div>
             </div>
-            <div id="Övrigt" class="tab-pane fade">
-                <h3>Övrigt</h3>
-                <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
-            </div>
-            <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-            <script src="lib/jquery-2.2.2.min.js"></script>
-            <!-- Include all compiled plugins (below), or include individual files as needed -->
-            <script src="lib/bootstrap.min.js"></script>
-        </div>
-    </div>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("#myTab a").click(function (e) {
-                e.preventDefault();
-                $(this).tab('show');
-            });
-        });
-    </script>
+            <script type="text/javascript">
+                $(document).ready(function () {
+                    $("#myTab a").click(function (e) {
+                        e.preventDefault();
+                        $(this).tab('show');
+                    });
+                });
+            </script>
 </body>
 </html>
