added more comments, price and a buy option

--- a/project2/produkt.html
+++ b/project2/produkt.html
@@ -17,20 +17,40 @@
         <li><a href="index.html">Vindkraftverk</a></li>
     </ol>
 
-    <!-- Här har vi vårt huvud innehåll -->
+    <!-- Här är produkt presentations sidan -->
     <div class="container theme-showcase" role="main">
         <div class="page-header">
             <h1>Smidigt vindkraftverk med bra effekt upptagning. 3MW</h1>
         </div>
 
-        <!-- Här har vi vår huvud produktbild -->
+        <!-- Här är mitten av produkt presentations sidan -->
         <div class="row">
-            <div class="col-xs-6 col-md-2">
+            <!-- Här visar vi hur vår produkt ser ut -->
+            <div class="col-md-2">
                 <a href="img/vindkraftverk.jpg" class="thumbnail">
                     <img src="img/vindkraftverk.jpg" alt="produktbild på ett vindkraftverk">
                 </a>
             </div>
+
+            <div class="col-md-7">
+            </div>
+
+            <!-- Här är pris och man kan köpa produkten -->
+            <div class="col-md-3">
+                <p>32 Miljoner</p>
+                <p>
+                    Antal
+                    <div class="col-xs-4">
+                        <input type="text" class="form-control">
+                    </div>
+                </p>
+                <p> <button type="button" class="btn btn-default">Köp</button></p>
+            </div>
         </div>
+
+
+
+
 
         <!-- Här har vi mer information som användaren kan välja att läsa mer om, organiserat i tabbar -->
         <ul class="nav nav-tabs" id="myTab">
@@ -49,17 +69,18 @@
             </div>
             <div id="Funktioner" class="tab-pane fade">
                 <h3>Funktioner</h3>
-                <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
+                <p>Vestibulum nec erat eu rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
             </div>
             <div id="Fakta" class="tab-pane fade">
                 <h3>Fakta</h3>
-                <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
+                <p>Vestibulum nec erat eu rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
             </div>
             <div id="Bilder" class="tab-pane fade">
 
                 <!-- Lite extra produktbilder -->
                 <h3>Bilder</h3>
                 <div class="row">
+
                     <div class="col-sm-6 col-md-3">
                         <a href="img/vindkraftverk2.jpg" class="thumbnail">
                             <img src="img/vindkraftverk2.jpg" alt="Generic placeholder thumbnail">
@@ -75,8 +96,10 @@
 
             <div id="Övrigt" class="tab-pane fade">
                 <h3>Övrigt</h3>
-                <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
+                <p>Vestibulum nec erat eu rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
             </div>
+
+
 
             <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
             <script src="lib/jquery-2.2.2.min.js"></script>
