made adjustments to buy element

--- a/project2/produkt.html
+++ b/project2/produkt.html
@@ -36,20 +36,24 @@
             </div>
 
             <!-- Här är pris och man kan köpa produkten -->
-            <div class="col-md-3">
-                <p>32 Miljoner</p>
-                <p>
-                    Antal
-                    <div class="col-xs-4">
-                        <input type="text" class="form-control">
+            <div class="col-md-2">
+                <p class="lead text-right">32 Miljoner KR</p>
+                <form class="form-horizontal">
+                    <div class="form-group form-group-sm pull-right">
+                        <label class="col-sm-7 control-label" for="formGroupInputSmall">Antal</label>
+                        <div class="col-sm-5">
+                            <input class="form-control" type="text" id="formGroupInputSmall">
+                        </div>
                     </div>
-                </p>
-                <p> <button type="button" class="btn btn-default">Köp</button></p>
+                    <div class="row">
+                        <div class="col-md-9 pull-right">
+                            <button type="button" class="btn btn-default btn-block">Köp</button>
+                        </div>
+                    </div>
+
+                </form>
             </div>
         </div>
-
-
-
 
 
         <!-- Här har vi mer information som användaren kan välja att läsa mer om, organiserat i tabbar -->
