adjusted responsive design for smaller screensizes

--- a/project2/produkt.html
+++ b/project2/produkt.html
@@ -26,7 +26,7 @@
         <!-- Här är mitten av produkt presentations sidan -->
         <div class="row">
             <!-- Här visar vi hur vår produkt ser ut -->
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <a href="img/vindkraftverk.jpg" class="thumbnail">
                     <img src="img/vindkraftverk.jpg" alt="produktbild på ett vindkraftverk">
                 </a>
@@ -36,7 +36,7 @@
             </div>
 
             <!-- Här är pris och man kan köpa produkten -->
-            <div class="col-md-2">
+            <div class="col-xs-6 col-sm-4 col-lg-2">
                 <p class="lead text-right">32 Miljoner KR</p>
                 <form class="form-horizontal">
                     <div class="form-group form-group-sm pull-right">
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-9 pull-right">
+                        <div class="col-xs-6 col-sm-4 col-md-9 pull-right">
                             <button type="button" class="btn btn-default btn-block">Köp</button>
                         </div>
                     </div>
@@ -85,12 +85,12 @@
                 <h3>Bilder</h3>
                 <div class="row">
 
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-xs-6 col-sm-4 col-md-3">
                         <a href="img/vindkraftverk2.jpg" class="thumbnail">
                             <img src="img/vindkraftverk2.jpg" alt="Generic placeholder thumbnail">
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-xs-6 col-sm-4 col-md-3">
                         <a href="img/vindkraftverk3.jpg" class="thumbnail">
                             <img src="img/vindkraftverk3.jpg" alt="Generic placeholder thumbnail">
                         </a>
