--- a/project2/produkt.html
+++ b/project2/produkt.html
@@ -20,7 +20,7 @@
         <div class="page-header">
             <!-- Vår logo -->
             <a href="index.html" title="Vind är bra">
-                <img class="img-rounded" src="img/logo-small.png" width="155" height="41" alt="logo">
+                <img class="img-rounded img-responsive" src="img/logo-small.png" width="155" height="41" alt="logo">
             </a>
             <div class="container">
                 <div class="row">
@@ -52,18 +52,18 @@
             </div>
 
             <!-- Här är pris och man kan köpa produkten -->
-            <div class="row col-xs-offset-7 col-sm-offset-8 col-md-offset-8">
-                <div class="col-xs-8 col-sm-8 col-md-8">
+            <div class="row col-xs-offset-6 col-sm-offset-8 col-md-offset-7">
+                <div class="col-xs-10 col-sm-10 col-md-9">
                     <p class="lead text-right">32 Miljoner KR</p>
                     <form class="form-horizontal">
                         <div class="form-group form-group-sm pull-right">
                             <label class="col-xs-5 col-sm-7 col-md-8 control-label" for="formGroupInputPrice">Antal</label>
                             <div class="col-xs-7 col-sm-5 col-md-4">
-                                <input class="form-control" type="text" id="formGroupInputPrice">
+                                <input class="form-control" type="number" placeholder="1"  id="formGroupInputPrice">
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-xs-9 col-sm-6 col-md-4 pull-right">
+                            <div class="col-xs-9 col-sm-6 col-md-5 pull-right">
                                 <button type="button" class="btn btn-default btn-block">Köp</button>
                             </div>
                         </div>
