--- a/project2/produkt.html
+++ b/project2/produkt.html
@@ -12,6 +12,8 @@
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- Lightbox to display images in a modal-->
     <link href="css/ekko-lightbox.min.css" rel="stylesheet">
+    <!-- Some prototyping styles-->
+    <link href="css/myprototype.css" rel="stylesheet" />
 
 </head>
 <body data-grid-framework="b3" data-grid-color="red" data-grid-opacity="0.2" data-grid-zindex="10" data-grid-gutterwidth="30px" data-grid-nbcols="16">
@@ -24,7 +26,6 @@
             </a>
             <div class="container">
                 <div class="row">
-
                 </div>
             </div>
         </div>
@@ -37,7 +38,6 @@
                     <li><a href="index.html">Elektricitet</a></li>
                     <li><a href="index.html">Vindkraftverk</a></li>
                 </ul>
-
             </div>
         </div>
         <h1>Smidigt vindkraftverk med bra effekt upptagning. 3MW</h1>
@@ -50,27 +50,31 @@
                     <img src="img/vindkraftverk.jpg" alt="produktbild på ett vindkraftverk">
                 </a>
             </div>
+            
+            <!-- För att få lite luft mellan titeltext och köpbox, finns det bättre sätt så hojta till :-) -->
+            <div class="hidden-sm hidden-xs">&nbsp;</div>
+            <div class="hidden-sm hidden-xs">&nbsp;</div>
 
             <!-- Här är pris och man kan köpa produkten -->
-            <div class="row col-xs-offset-6 col-sm-offset-8 col-md-offset-7">
-                <div class="col-xs-10 col-sm-10 col-md-9">
-                    <p class="lead text-right">32 Miljoner KR</p>
-                    <form class="form-horizontal">
-                        <div class="form-group form-group-sm pull-right">
-                            <label class="col-xs-5 col-sm-7 col-md-8 control-label" for="formGroupInputPrice">Antal</label>
-                            <div class="col-xs-7 col-sm-5 col-md-4">
-                                <input class="form-control" type="number" placeholder="1"  id="formGroupInputPrice">
+                <div class="row col-xs-offset-6 col-sm-offset-8 col-md-offset-7">               
+                    <div class="col-xs-10 col-sm-10 col-md-9">                       
+                        <p class="lead text-right">32 Miljoner KR</p>
+                        <form class="form-horizontal">
+                            <div class="form-group form-group-sm pull-right">
+                                <label class="col-xs-5 col-sm-7 col-md-8 control-label" for="formGroupInputPrice">Antal</label>
+                                <div class="col-xs-7 col-sm-5 col-md-4">
+                                    <input class="form-control" type="number" placeholder="1" id="formGroupInputPrice">
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-9 col-sm-6 col-md-5 pull-right">
-                                <button type="button" class="btn btn-default btn-block">Köp</button>
+                            <div class="row">
+                                <div class="col-xs-9 col-sm-6 col-md-5 pull-right">
+                                    <button type="button" class="btn btn-default btn-block">Köp</button>
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
         <!-- Här har vi mer information som användaren kan välja att läsa mer om, organiserat i tabbar -->
@@ -101,7 +105,6 @@
                 <!-- Lite extra produktbilder -->
                 <h3>Bilder</h3>
                 <div class="row">
-
                     <div class="col-xs-6 col-sm-4 col-md-3">
                         <a href="img/vindkraftverk2.jpg" class="thumbnail" data-toggle="lightbox">
                             <img src="img/vindkraftverk2.jpg" alt="Generic placeholder thumbnail">
