--- a/project1/index.html
+++ b/project1/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>My Project</title>
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Andreas sida</h1>
+    <div id="pageHolder">
+        <h1 class="wireframeText headLine">Andreas sida</h1>
+        <p class="wireframeText paragraphDescription">Denna tänkte jag ta från wireframe till prototyp</p>
+        <p class="wireframeText paragraphDescription">Klicka på bilden för att se resultatet</p>
+        <a href="prototypeSite.html">
+            <img src="./images/formWireframe.jpg" class="myWireframePic"/>
+        </a>
+    </div>
 </body>
 </html>
