changed path to Andreas project in start page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>GruppUppgift: Välj 1 wireframe och ta till prototyp</h1>
     <ul>
-        <li><a href="project1/index.html">Andreas</a></li>
+        <li><a href="project1/FixieSite/index.html">Andreas</a></li>
         <li><a href="project2/index.html">Anders</a></li>
     </ul>
 </body>
