removed debug code

--- a/project2/produkt.html
+++ b/project2/produkt.html
@@ -16,7 +16,7 @@
     <link href="css/myprototype.css" rel="stylesheet" />
 
 </head>
-<body data-grid-framework="b3" data-grid-color="red" data-grid-opacity="0.2" data-grid-zindex="10" data-grid-gutterwidth="30px" data-grid-nbcols="16">
+<body>
     <!-- Här är produkt presentations sidan -->
     <div class="container">
         <div class="page-header">
