--- a/project1/MalmöFixie-Bootstrap/contact.html
+++ b/project1/MalmöFixie-Bootstrap/contact.html
@@ -48,6 +48,12 @@
                                     <li><a href="buildABike.html">Build a Bike</a></li>
                                     <li class="active"><a href="contact.html">Contact <span class="sr-only">(current)</span></a></li>
                                 </ul>
+								<form class="navbar-form navbar-left" role="search">
+								<div class="form-group">
+									<input type="text" class="form-control" placeholder="Search">
+								</div>
+								<button type="submit" class="btn btn-default glyphicon glyphicon-search"></button>
+							</form>
                             </div><!-- /.navbar-collapse -->
                         </div><!-- /.container-fluid -->
                     </nav>
