integrated product page

--- a/project1/MalmöFixie-Bootstrap/ourBikes.html
+++ b/project1/MalmöFixie-Bootstrap/ourBikes.html
@@ -64,35 +64,35 @@
     <main>
         <div class="row spacingOf10">
             <div class="col-xs-12 col-md-4">
-                <a href="#"><img src="img/bike1.jpg" alt="bike" class="img-thumbnail inRow"></a>
+                <a href="produkt.html"><img src="img/bike1.jpg" alt="bike" class="img-thumbnail inRow"></a>
             </div>
             <div class="col-xs-12 col-md-4">
-                <a href="#"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
+                <a href="produkt.html"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
             </div>
             <div class="col-xs-12 col-md-4">
-                <a href="#"><img src="img/bike1.jpg" alt="bike" class="img-thumbnail inRow"></a>
-            </div>
-        </div>
-        <div class="row spacingOf10">
-            <div class="col-xs-12 col-md-4">
-                <a href="#"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
-            </div>
-            <div class="col-xs-12 col-md-4">
-                <a href="#"><img src="img/bike1.jpg" alt="bike" class="img-thumbnail inRow"></a>
-            </div>
-            <div class="col-xs-12 col-md-4">
-                <a href="#"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
+                <a href="produkt.html"><img src="img/bike1.jpg" alt="bike" class="img-thumbnail inRow"></a>
             </div>
         </div>
         <div class="row spacingOf10">
             <div class="col-xs-12 col-md-4">
-                <a href="#"><img src="img/bike1.jpg" alt="bike" class="img-thumbnail inRow"></a>
+                <a href="produkt.html"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <a href="produkt.html"><img src="img/bike1.jpg" alt="bike" class="img-thumbnail inRow"></a>
+            </div>
+            <div class="col-xs-12 col-md-4">
+                <a href="produkt.html"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
+            </div>
+        </div>
+        <div class="row spacingOf10">
+            <div class="col-xs-12 col-md-4">
+                <a href="produkt.html"><img src="img/bike1.jpg" alt="bike" class="img-thumbnail inRow"></a>
              </div>
             <div class="col-xs-12 col-md-4">
-                <a href="#"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
+                <a href="produkt.html"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
             </div>
             <div class="col-xs-12 col-md-4">
-                <a href="#"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
+                <a href="produkt.html"><img src="img/bike2.jpg" alt="bike" class="img-thumbnail inRow"></a>
             </div>
         </div>
 
