--- a/project1/MalmöFixie-Bootstrap/buildABike.html
+++ b/project1/MalmöFixie-Bootstrap/buildABike.html
@@ -61,49 +61,56 @@
             </div>
         </header>
     </div>
-    <main class="row spacingOf10">
-        <div class="col-xs-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img src="img/bike1.jpg" alt="A bike">
-                        <div class="carousel-caption">
-                            Beautiful bikes
+    <main class="row">
+        <div class="col-xs-8">
+            <img src="img/sport-bike.svg" class="img-responsive clickable" id="bikeClick" alt="Responsive image">
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel"> Pick your special color </h4>
                         </div>
-                    </div>
-                    <div class="item">
-                        <img src="img/bike2.jpg" alt="Another bike">
-                        <div class="carousel-caption">
-                            ...
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="img/bike1.jpg" alt="Another bike">
-                        <div class="carousel-caption">
-                            ...
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-xs-1 color red clickable"><a href="#"></a></div>
+                                <div class="col-xs-1 color blue clickable"><a href="#"></a></div>
+                                <div class="col-xs-1 color green clickable"><a href="#"></a></div>
+                                <div class="col-xs-1 color grey clickable"><a href="#"></a></div>
+                                <div class="col-xs-1 color yellow clickable"><a href="#"></a></div>
+                                <div class="col-xs-1 color orange clickable"><a href="#"></a></div>
+                                <div class="col-xs-1 color white clickable"><a href="#"></a></div>
+                                <div class="col-xs-1 color black clickable"><a href="#"></a></div>
+                            </div>
+                            <div id="progressBar" class="progress hidden">
+                                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                                    Please wait...
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
+        </div>
 
+        <div class="col-xs-4">
+            <p>This image will auto-update</p>
+            <img src="img/sport-bike.svg" class="img-responsive half-height" alt="Responsive image">
+            <div class="panel panel-info">
+                <!-- Default panel contents -->
+                <div class="panel-heading"><h4>Extra stuff to buy</h4></div>
+                <!-- List group -->
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="#">Dapibus ac facilisis in</a></li>
+                    <li class="list-group-item"><a href="#">Dapibus ac facilisis in</a></li>
+                    <li class="list-group-item"><a href="#">Dapibus ac facilisis in</a></li>
+                    <li class="list-group-item"><a href="#">Dapibus ac facilisis in</a></li>
+                </ul>
+            </div>
         </div>
 
     </main> <!--end of main row -->
@@ -133,6 +140,6 @@
 
 
 </div> <!-- end of container -->
-
+<script src="js/main.js"></script>
 </body>
 </html>
