--- a/project1/MalmöFixie-Bootstrap/produkt.html
+++ b/project1/MalmöFixie-Bootstrap/produkt.html
@@ -80,8 +80,8 @@
             <div class="hidden-sm hidden-xs">&nbsp;</div>
 
             <!-- Här är pris och man kan köpa produkten -->
-                <div class="row col-xs-offset-6 col-sm-offset-8 col-md-offset-7">               
-                    <div class="col-xs-10 col-sm-10 col-md-4">                       
+                <div class="row col-xs-offset-7 col-sm-offset-8 col-md-offset-8">               
+                    <div class="col-xs-10 col-sm-10 col-md-8">                       
                         <p class="lead text-right">7 595 KR</p>
                         <form class="form-horizontal">
                             <div class="form-group form-group-sm pull-right">
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-9 col-sm-6 col-md-8 pull-right">
+                                <div class="col-xs-9 col-sm-6 col-md-5 pull-right">
                                     <button type="button" class="btn btn-default btn-block">Köp</button>
                                 </div>
                             </div>
@@ -114,7 +114,7 @@
         <div class="tab-content">
             <div id="Beskrivning" class="tab-pane fade in active">
                 <h3>Beskrivning</h3>
-                <p>MalmöFixie. Floater Twospeed RACE
+                <p>MalmöFixie.
 				Floater Twospeed RACE är samma fina cykel som den vanliga Floater Singlespeed men med en
 				 tvådelad navväxel och en sportigare geometri. Bockstyret ger dig en mer framåtlutad cykelposition så att du kan få mer kraft i tramptagen. Den är helt enkelt mer mångsidig och blir lättare att använda i vardagscyklingen. Passar perfekt att ha till och från jobbet eller bara som glassig stadscykel.
 
