--- a/project1/MalmöFixie-Bootstrap/buildABike.html
+++ b/project1/MalmöFixie-Bootstrap/buildABike.html
@@ -99,7 +99,7 @@
 
         <div class="col-xs-4">
             <p>This image will auto-update</p>
-            <img src="img/sport-bike.svg" class="img-responsive half-height" alt="Responsive image">
+            <img src="img/bike1.jpg" class="img-responsive half-height" alt="Responsive image">
             <div class="panel panel-info">
                 <!-- Default panel contents -->
                 <div class="panel-heading"><h4>Extra stuff to buy</h4></div>
