--- a/project1/MalmöFixie-Bootstrap/index.html
+++ b/project1/MalmöFixie-Bootstrap/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewpport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MalmöFixie</title>
     <!--javascripts-->
     <script src="js/jquery.min.js"></script>
