added spacing on text

--- a/project1/MalmöFixie-Bootstrap/buildABike.html
+++ b/project1/MalmöFixie-Bootstrap/buildABike.html
@@ -97,7 +97,7 @@
             </div>
         </div>
 
-        <div class="col-xs-4">
+        <div class="col-xs-4 spacingOf10">
             <p>This image will auto-update</p>
             <img src="img/bike1.jpg" class="img-responsive half-height" alt="Responsive image">
             <div class="panel panel-info">
