added some text

--- a/project1/MalmöFixie-Bootstrap/buildABike.html
+++ b/project1/MalmöFixie-Bootstrap/buildABike.html
@@ -98,7 +98,7 @@
         </div>
 
         <div class="col-xs-4 spacingOf10">
-            <p>This image will auto-update</p>
+            <p>This image will auto-update based on your color-choices</p>
             <img src="img/bike1.jpg" class="img-responsive half-height" alt="Responsive image">
             <div class="panel panel-info">
                 <!-- Default panel contents -->
