added images and functions for buttons

--- a/project1/MalmöFixie-Bootstrap/contact.html
+++ b/project1/MalmöFixie-Bootstrap/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewpport" content="width=device-width, initial-scale=1">
     <title>MalmöFixie</title>
     <!--javascripts-->
     <script src="js/jquery.min.js"></script>
@@ -17,6 +17,7 @@
 </head>
 <body>
 <div class="container-fluid">
+
     <div class="row">
         <header class="col-xs-12">
             <div class="row" id="logoArea">
@@ -115,14 +116,13 @@
                     <label for="exampleInputEmail2">Email</label>
                     <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
                 </div>
-                <button type="submit" class="btn btn-default">Send!</button>
+                <button type="submit" class="btn btn-default" id="btn-submit">Send!</button>
             </form>
         </div>
         <div class="col-xs-12 col-md-6">
-            <p>Lorem ipsum dolor sit amet, has ea quem inani, mea cu bonorum ponderum expetendis. Partem cetero liberavisse ea sea. Pertinax facilisis his cu, ad sed ridens commodo lucilius. Has te percipit scribentur dissentiunt. At latine menandri duo.
-
-                Ius dico iudico no. Nec eu oblique quaestio salutatus, ne qui nominavi scriptorem reformidans, et nam dolore audiam. Mea rebum bonorum fabulas at, no sit minim tollit efficiantur, duo denique fastidii periculis an. Sit graece audiam consequat ad.</p>
-
+            <a href="#" class="fb-share"><img src="img/like_us_facebook-500x280.png" id="fbLogo"> </a>
+            <a href="#" class="twitter-share"><img src="img/twitter-social-network-icon-vector_652139.jpg" id="twitterLogo"> </a>
+            <p>Lorem ipsum dolor sit amet, has ea quem inani, mea cu bonorum ponderum expetendis. Partem cetero liberavisse ea sea. Pertinax facilisis his cu, ad sed ridens commodo lucilius. Has te percipit scribentur dissentiunt. At latine menandri duo.</p>
         </div>
     </div>
 
@@ -132,6 +132,6 @@
 
 
 </div> <!-- end of container -->
-
+<script src="js/main.js"></script>
 </body>
 </html>
