Added function for forms

--- a/ourBikes.html
+++ b/ourBikes.html
@@ -48,12 +48,12 @@
                                     <li><a href="buildABike.html">Build a Bike</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
-								<form class="navbar-form navbar-left" role="search">
+								<div class="navbar-form navbar-left" role="search">
 								<div class="form-group">
 									<input type="text" class="form-control" placeholder="Search">
 								</div>
-								<button type="submit" class="btn btn-default glyphicon glyphicon-search"></button>
-							</form>
+								<button id="searchBtn" class="btn btn-default glyphicon glyphicon-search"></button>
+							</div>
                             </div><!-- /.navbar-collapse -->
                         </div><!-- /.container-fluid -->
                     </nav>
