--- a/contact.html
+++ b/contact.html
@@ -49,12 +49,12 @@
                                     <li><a href="buildABike.html">Build a Bike</a></li>
                                     <li class="active"><a href="contact.html">Contact <span class="sr-only">(current)</span></a></li>
                                 </ul>
-								<form class="navbar-form navbar-left" role="search">
+								<div class="navbar-form navbar-left" role="search">
 								<div class="form-group">
 									<input type="text" class="form-control" placeholder="Search">
 								</div>
-								<button type="submit" class="btn btn-default glyphicon glyphicon-search"></button>
-							</form>
+								<button id="searchBtn" class="btn btn-default glyphicon glyphicon-search"></button>
+							</div>
                             </div><!-- /.navbar-collapse -->
                         </div><!-- /.container-fluid -->
                     </nav>
